# Eliot

./: LICENSE  README.md  main.py  pyproject.toml
config/: __init__.py  action_saya_config.py  config.yaml  config_exp.yaml  grouplist.json  saya.yaml  userlist.json
log/: lastest.2023-05-30_02-04-31_153255.log.tar.xz  lastest.2023-05-31_00-00-03_943320.log.tar.xz  lastest.2023-06-01_22-40-39_630151.log.tar.xz
saya/: api_a60_pic.py  api_apex_check.py  api_bing_gpt.py  api_news.py  api_picture.py  api_translate.py  api_weather.py  debug_ping.py  event_at.py  img_tank.py  message_crazy_tuesday.py  message_dic.py  message_help.py  message_nodog.py  message_nosleep.py  message_note.py
