[tool.poetry]
name = "eliot"
version = "0.1.0"
description = ""
authors = ["Mappland"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
graia-ariadne = {extras = ["standard"], version = "^0.11.5"}
httpx = "^0.24.1"
pinyin = "^0.4.0"
pyyaml = "^6.0"
pillow = "^9.5.0"
numpy = "^1.24.3"
graiax-silkcoder = {extras = ["libsndfile"], version = "^0.3.6"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
